rules.v4
# Generated by iptables-save v1.4.12 on Tue Feb  5 10:51:02 2013
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 0/0 -o eth0 -j SNAT --to-source AAA_VPS_EXT_IP
-A PREROUTING -s 0/0 -p tcp -m tcp --dport 443 -j DNAT --to-destination DDD_REM_IP:443
-A PREROUTING -s 0/0 -p udp -m udp --dport BBB_VPS_LOC_PORT -j DNAT --to-destination DDD_REM_IP:CCC_REM_PORT
COMMIT
# Completed on Tue Feb  5 10:51:02 2013
# Generated by iptables-save v1.4.12 on Tue Feb  5 10:51:02 2013
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Generated by iptables-save v1.4.12 on Tue Feb  5 10:51:02 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport EEE_SSH_PORT -j ACCEPT
#-A INPUT -p udp -m udp --dport BBB_VPS_LOC_PORT -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -m limit --limit 1/sec -j ACCEPT
-A INPUT -s 224.0.0.0/8 -j DROP
-A INPUT -d 224.0.0.0/8 -j DROP
-A INPUT -s 255.255.255.255/32 -j DROP
-A INPUT -d 0.0.0.0/32 -j DROP
-A INPUT -p tcp -m multiport --dports 80,1443,3389,1947,5060,8088,67,68,135,137,138,139,445,631,1025 -j DROP
-A INPUT -p udp -m multiport --dports 80,1443,3389,1947,5060,8088,67,68,135,137,138,139,445,631,1025 -j DROP

-A INPUT -p tcp -m multiport --dports 21,22,23,110,4899,475,8080,8081,5913,123,53,1433 -j DROP
-A INPUT -p udp -m multiport --dports 21,22,23,110,4899,475,8080,8081,5913,123,53,1433 -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -j LOG


-A FORWARD -s 0/0 -d DDD_REM_IP/32 -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -s 0/0 -d DDD_REM_IP/32 -i eth0 -p udp -m udp --dport CCC_REM_PORT -j ACCEPT
-A FORWARD -s DDD_REM_IP/32 -o eth0 -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
COMMIT
# Completed on Tue Feb  5 10:51:02 2013
